--- a/lms/templates/student/issue_history.html
+++ b/lms/templates/student/issue_history.html
@@ -45,7 +45,7 @@
                         <span class="position-absolute ps-3 search-icon">
                             <i class="fe fe-search"></i>
                         </span>
-                        {{ form.query(class="form-control ps-6", placeholder="Filter Issued Book by date")}}
+                        {{ form.query(class="form-control ps-6", placeholder="Filter Issued Book by Issue date")}}
                         {% if form.query.errors %}
                         <ul class="errors">
                             {% for error in form.query.errors %}
