--- a/lms/templates/student/single_book.html
+++ b/lms/templates/student/single_book.html
@@ -48,9 +48,16 @@
                             <h1 class="txt">{{book.title}}</h1>
                             <div>
                                 <!-- review -->
-                                <span><span class="me-1 text-dark fw-semibold">4.4<i
-                                            class="mdi mdi-star text-success ms-1"></i>
-                                    </span>592 Students Reviews</span>
+                                <span><span class="me-1 text-dark fw-semibold"> Author:
+                                    </span>{{book.author.name}}</span>
+                            </div>
+                            <div>
+                                <span><span class="me-1 text-dark fw-semibold">Publisher
+                                    </span>{{book.publisher}}</span>
+                            </div>
+                            <div>
+                                <span><span class="me-1 text-dark fw-semibold">Book Isbn no:
+                                    </span>{{book.isbn}}</span>
                             </div>
                         </div>
                         <hr class="my-3">
