fix:fixed error on date search on transactionroute

--- a/lms/templates/student/fine.html
+++ b/lms/templates/student/fine.html
@@ -38,7 +38,7 @@
                     </ul>
                 </div>
                 <div class="p-4 row">
-                    <!-- Form -->
+                    <!-- Form
                     <form action="{{ url_for('student.search_fine') }}" method="post"
                         class="d-flex align-items-center col-12 col-md-8 col-lg-3">
                         {{ form.hidden_tag() }}
@@ -54,7 +54,7 @@
                         </ul>
                         {% endif %}
 
-                    </form>
+                    </form> -->
 
                 </div>
                 <div>
